--- a/content/4-case-studies/26.md
+++ b/content/4-case-studies/26.md
@@ -94,7 +94,7 @@ Most of the canvases had deformations. To eliminate them, we applied moisture an
 
 The corrosive nature of the iron gall ink markings on the back of the supports caused some deterioration and tears in the textile. To care for this damage we had to find a method that allowed for the stabilization of the canvas without covering the information of the marks ([fig. 26.6a](#fig-26-6-a)). We used silk crepeline, with Beva as an adhesive. As a thin, transparent textile with good mechanical resistance, the silk crepeline made it possible to conserve both the materials and the information ([fig. 26.6b](#fig-26-6-b)).[^5] Finally, for the holes of the paintings without iron-gall ink marks, we used linen patches with frayed edges, adhered with glue paste.
 
-{% figuregroup '2' 'fig-26-6-a, fig-26-6-b' %}
+{% figuregroup '2' 'fig-26-6-a, fig-26-6-b' '*Saint Matthew* painting: canvas with iron gall ink marks: (a) before treatment, (b) after treatment. Image: Claudia Garza / Archdiocese of Ttalnepantla' %}
 
 ## Conclusion
 
