--- a/content/6-interventions/34.md
+++ b/content/6-interventions/34.md
@@ -28,7 +28,7 @@ At the end of the conflict, it proved necessary to repair the damage caused by i
 
 Among the most active restorers were without doubt the Podio family, originally from Bologna. We have at least a dozen documented linings executed by them, and most of these date from the 1950s ([fig. 34.1](#fig-34-1-a)) and are still effective as supports for the paintings.[^4] In their estimates, the Podio often indicate hemp as the lining textile used, but more importantly we note that they often repeated the operation they had just concluded with a second lining that involved a double or even a triple layer of glue paste, which would be filtered through the weave and the excess removed through the application of great pressure; the ironing operation, on the other hand, was not repeated.[^5] The result was a lining of great rigidity, and of high susceptibility to changes in humidity and temperature because of the amount of glue on the reverse.
 
-{% figuregroup '2' 'fig-34-1-a, fig-34-1-b' %}
+{% figuregroup '2' 'fig-34-1-a, fig-34-1-b' 'G. F. Barbieri, called Il Guercino (Italian, 1591–1666), *Flagellation*, 1657. Oil on canvas, 244 x 187.5 cm (96 x 73 4/5 in.). (a) Before lining. (b) After Podio’s 1947 lining. Image: Barberini Corsini National Galleries, Rome. (a) ICCD-Gabinetto Fotografico Nazionale, Fondo GFN, n. inv E47623, with authorization of Istituto Centrale per il Catalogo e la Documentazione, MiBACT, further reproduction not authorized / (b) Gallerie Nazionali di arte antica (MiBACT)-Biblioteca Hertziana, Istituto Max Planck per la storia dell’arte/Enrico Fontolan' %}
 
 That these linings should still be in place and largely effective is all the more notable. However, it is true that the environment of our galleries is essentially a dry one, with a rather low RH of around 40%—and therefore suitable for the preservation of this kind of restoration. In this context I should mention a curious estimate given by D. Podio for work to be carried out on a *Virgin and Child* attributed to Raphael, in the Accademia di San Luca. Having recognized it as a transfer, he proposed an initial lining on a hemp canvas, with the consequent ironing and filling, and then a second lining using not less than three hemp canvases and another ironing: “This would give back to the painting the appearance of a painting on wood.” His aim was therefore a rigidity that was not only functional but also aesthetic.[^6]
 
