--- a/content/8-posters/49.md
+++ b/content/8-posters/49.md
@@ -39,13 +39,11 @@ abstract: "Evolon CR, an absorbent fabric composed of polyester and polyamide mi
 
 Despite the successful use of Evolon CR (a nonwoven tissue made of a polyester and polyamide blend[^1]) in removing overpaint and varnish ({% cite 'Ribits 2017' %}), little research has been done on its ability to poultice wax-resin mixtures. Confronted with two wax-resin-lined paintings that required relining, the authors sought a method that would achieve a homogeneous surface topography and remove residual wax-resin mixtures on the verso. The successful reduction of wax-resin mixtures ([fig. 49.1a](#fig-49-1-a)) prompted further research into the efficacy of this method and into the constituent materials poulticed into and onto the Evolon CR tissue. The goals of this study were to better understand the chemical and physical properties of Evolon CR and to evaluate the tissue’s efficacy at reducing wax-resin mixtures in an effort to improve and expand its practical use in conservation.
 
-{% figure 'fig-49-1-a' %}
-
 ## Experimental Design
 
 Fragments of twentieth-century study collection paintings, previously wax lined by students with a 2:1 microcrystalline wax: Piccolyte resin, were used for this study. Following the removal of the old lining with heat, the adhesive mixture on the verso of the canvases was reduced using the following procedure (unless otherwise noted): Evolon CR squares measuring 2 inches (all weighing 0.18 g ±0.001 g) were placed onto the verso of the painting and then wetted with 1 mL of petroleum benzine, delivered by Eppendorf 1000 uL pipette. They were then covered with Mylar and left for varying lengths of dwell time ([figs. 49.1b](#fig-49-1-b), [49.1c](#fig-49-1-c)).
 
-{% figuregroup '2' 'fig-49-1-b, fig-49-1-c' %}
+{% figuregroup '3' 'fig-49-1-a, fig-49-1-b, fig-49-1-c' '(a) Initial test areas with Evolon CR tissue and solvent on the verso of a painting following wax lining reversal. (b) Applying 1 mL of solvent to Evolon CR tissue. (c) Removal of Evolon CR after prescribed dwell time. Julianna Ly' %}
 
 Four experiments were conducted to evaluate solvent dwell time on the surface, the potential to reuse the tissue, different application methods, and the solvent delivered with Evolon CR.
 
@@ -107,7 +105,7 @@ In addition to assessing the efficacy of wax-resin poulticing through weight gai
 
 SEM images ([figs. 49.4a](#fig-49-4-a), [b](#fig-49-4-b), [c](#fig-49-4-c), and [d](#fig-49-4-d)) visualized morphology changes on the surface. With each use, the individual fibers become increasingly less distinct, presumably as the wax resin coats and fills the pores. The loss of definition with each use could be attributed to redistribution of the wax resin already poulticed into the tissue upon re-exposure to solvent, the continued filling of tissue interstices with freshly solubilized/softened wax resin, or a combination of both.
 
-{% figuregroup '2' 'fig-49-4-a, fig-49-4-b, fig-49-4-c, fig-49-4-d' %}
+{% figuregroup '2' 'fig-49-4-a, fig-49-4-b, fig-49-4-c, fig-49-4-d' 'SEM BSE images of unused tissue: (a) control, (b) after iteration 1, (c) after iteration 2, (d) after iteration 3. (Surface morphology changes visualized in SEM BSE images captured at 137X by Dr. Judy Rudolph, volunteer conservation scientist, Scientific Research and Analysis lab, Winterthur Museum, Garden, and Library.) Images: Judy Rudolph' %}
 
 BET analysis yielded a surprising result ([fig. 49.5](#fig-49-5)). An increase in measured surface area was observed after the first use, from 0.0982 <sup>2</sup>/g (unused control) to 0.4315 <sup>2</sup>/g (after single use). Contrary to the weight gain data and SEM images, both of which confirmed that the tissue had picked up wax resin, BET suggested the porosity increased. However, after the first iteration, BET data trended as expected: with each iterative use, the measured surface area decreased as more wax resin was poulticed into the tissue.
 
@@ -119,7 +117,7 @@ While this publication was in preparation, further analysis of the BET data reve
 
 The 1:9 mixture of acetone and petroleum benzine gave the largest weight increase, followed by neat petroleum benzine ([fig. 49.6a](#fig-49-6-a)). These results demonstrate a clear relationship between the choice of solvent and amount of poulticed material. The 1:9 mixture likely performed best due to acetone’s ability to solubilize resinous components in the wax-resin mixture. As expected, neat acetone resulted in negligible weight gain given its chemical incompatibility with nonpolar, aliphatic compounds. Importantly, this latter result also suggests that the chemical groups making up the Evolon CR (the polyamide and polyester fibers) have minimal effects in poulticing wax resin. The efficacy of poulticing appears to come primarily from solvent choice. Py-GCMS analysis ([fig. 49.6b](#fig-49-6-b)) of the poulticed material showed the characteristic Gaussian distribution of hydrocarbon peaks from the wax component. As expected, the wax-based hydrocarbon peaks increased in intensity as the ratio of petroleum benzine to acetone increased.
 
-{% figuregroup '2' 'fig-49-6-a, fig-49-6-b' %}
+{% figuregroup '2' 'fig-49-6-a, fig-49-6-b' '(a) Weight increases (in grams) for each tissue exposed to the solvents or mixtures tested. (b) Py‑GCMS analysis of the three solvents: solvent 1 is 100% acetone, solvent 2 is 1:1 acetone and petroleum benzine, and solvent 3 is 1:9 acetone and petroleum benzine. (Py-GCMS analysis conducted by Dr. W. Chris Petersen, Volunteer Conservation Scientist and Affiliated Associate Professor, Scientific Research and Analysis lab, Winterthur Museum, Garden and Library.) Images: a: Julianna Ly and Tracy Liu; b: Chris Petersen, Tracy Liu' %}
 
 In summary, the results from all experiments indicate that Evolon CR is an effective material for reducing wax resin; however, the tissue alone never resulted in complete removal of the adhesive.
 
