--- a/content/8-posters/51.md
+++ b/content/8-posters/51.md
@@ -77,9 +77,9 @@ The second main component in glue pastes are flours, in which starch, proteins, 
 
 ## Biological, Chemical and Mechanical Performance of Glue-Paste Linings
 
-After preliminary research dedicated to the study of several protein glues with different Bloom grades and some flours with different protein content, mock-ups with eight different combinations of materials were prepared ([fig. 51.1](#fig-51-1-a)). For this purpose, one cowhide glue, one rye flour, and three wheat flours were selected ([table 51.1](#table-51-1)). Two different fabrics were used as lining support, and a commercial primed linen canvas with a ground layer of titanium white/zinc oxide bound in oil was used to simulate a canvas painting. Glue-paste mixtures were tested according to the ratio shown in [table 51.2](#table-51-2). Peel and tensile tests were run in order to record the adhesion and cohesion forces at different RH conditions for unaged and aged samples. Biodeterioration and insect infestation tests were also carried out ({% cite 'Fuster López et al. 2017' %}).
+After preliminary research dedicated to the study of several protein glues with different Bloom grades and some flours with different protein content, mock-ups with eight different combinations of materials were prepared ([fig. 51.1](#fig-51-1)). For this purpose, one cowhide glue, one rye flour, and three wheat flours were selected ([table 51.1](#table-51-1)). Two different fabrics were used as lining support, and a commercial primed linen canvas with a ground layer of titanium white/zinc oxide bound in oil was used to simulate a canvas painting. Glue-paste mixtures were tested according to the ratio shown in [table 51.2](#table-51-2). Peel and tensile tests were run in order to record the adhesion and cohesion forces at different RH conditions for unaged and aged samples. Biodeterioration and insect infestation tests were also carried out ({% cite 'Fuster López et al. 2017' %}).
 
-{% figuregroup '3' 'fig-51-1-a, fig-51-1-b, fig-51-1-c, fig-51-1-d, fig-51-1-e, fig-51-1-f, fig-51-1-g, fig-51-1-h, fig-51-1-i, fig-51-1-j, fig-51-1-k, fig-51-1-l, fig-51-1-m ' %}
+{% figure 'fig-51-1' %}
 
 {% figure 'table-51-1' %}
 
@@ -91,7 +91,7 @@ Results ([table 51.3](#table-51-3)) evidenced the influence of lining materials 
 
 [Fig. 51.2](#fig-51-2-a) shows the restraint tests of different lining fabrics and glue-paste linings. While the force development in the restrained raw canvases when subjected to different RH was similar for both canvas densities tested, significant differences can be observed when the same textile is used as lining fabric in combination with the different glue paste formulations. For example, adhesive mixtures containing rye Type 70 (7% protein content) develop twice the force when used in combination with close-weave fabrics than when used with open-weave fabrics over a wide range of RH conditions ([fig. 51.2.b](#fig-51-2-b)). These values drop to half for both open- and close-weave fabrics when Type 55 (Manitoba) wheat flour is used ([fig. 51.2.c](#fig-52-1-c).). In addition, it was also observed that among all the combinations tested, closely woven canvases and semiwhole flour–based recipes induce the highest contraction forces in restrained samples, leading to significant risk of cracking and delamination ([fig. 51.3](#fig-51-3)).
 
-{% figuregroup '3' 'fig-51-2-a, fig-51-2-b, fig-51-2-c' %}
+{% figuregroup '3' 'fig-51-2-a, fig-51-2-b, fig-51-2-c' 'Restraint tests of different lining fabrics and glue paste linings. (a) Force development of open- and close-weave lining canvases (alone) when subjected to different RH. (b) Force development of rye T70, linings as a function of the weave geometry of the lining canvas when subjected to different RH. (c) Force development of Manitoba wheat T55, linings as a function of the weave geometry of the lining canvas when subjected to different RH. Courtesy of the research team' %}
 
 {% figure 'fig-51-3' %}
 
@@ -99,9 +99,9 @@ Results evidenced that biodegradation is governed by the flour milling and flour
 
 {% figure 'fig-51-4' %}
 
-The need to agree on objective parameters that allow the comparison of the different variables considered when studying materials for a given treatment has been suggested elsewhere in this publication by [Cecil Krarup Andersen](/3-open-questions/21/). Such parameters could help conservators make informed decisions based on the mid- to long-term vulnerability of the materials used. [Fig. 51.5](#fig-51-5-a) presents different star diagrams corresponding to the eight glue-paste linings studied. Values of 1 to 5 are given for each risk factor, with 1 being low-risk and 5 high-risk. This means that numeric values measured for each factor ({% cite 'Fuster López et al. 2017' %}) are normalized to fit this scale.
+The need to agree on objective parameters that allow the comparison of the different variables considered when studying materials for a given treatment has been suggested elsewhere in this publication by [Cecil Krarup Andersen](/3-open-questions/21/). Such parameters could help conservators make informed decisions based on the mid- to long-term vulnerability of the materials used. [Fig. 51.5](#fig-51-5) presents different star diagrams corresponding to the eight glue-paste linings studied. Values of 1 to 5 are given for each risk factor, with 1 being low-risk and 5 high-risk. This means that numeric values measured for each factor ({% cite 'Fuster López et al. 2017' %}) are normalized to fit this scale.
 
-{% figuregroup '2' 'fig-51-5-a, fig-51-5-b, fig-51-5-c, fig-51-5-d, fig-51-5-e, fig-51-5-f, fig-51-5-g, fig-51-5-h' %}
+{% figure 'fig-51-5' %}
 
 The aspects considered are these:
 
