Add missing quote to short_title YAML

--- a/content/3-open-questions/15.md
+++ b/content/3-open-questions/15.md
@@ -2,7 +2,7 @@
 label: "15"
 title: "Canvas Complexity"
 subtitle: "The Life of a Complex Composite"
-short_title: Canvas Complexity
+short_title: "Canvas Complexity"
 layout: essay
 order: 150
 contributor:
