--- a/content/3-open-questions/20.md
+++ b/content/3-open-questions/20.md
@@ -1,7 +1,7 @@
 ---
 label: "20"
 title: "A Short History of Suction Tables"
-short_title: A Short History of Suction Tables
+short_title: "A Short History of Suction Tables"
 layout: essay
 order: 200
 contributor:
