--- a/content/6-interventions/32.md
+++ b/content/6-interventions/32.md
@@ -2,7 +2,7 @@
 label: "32"
 title: "Less Is More"
 subtitle: "Juxtaposing the History of Lining and Alternative Treatments as Found in the Neue Pinakothek and the Sammlung Schack in Munich"
-short_title: Less Is More
+short_title: "Less Is More"
 layout: essay
 order: 320
 contributor:
