--- a/content/1-history/6.md
+++ b/content/1-history/6.md
@@ -2,7 +2,7 @@
 label: "6"
 title: "Structural Conservation of Canvases in Russia from the 1960s to the Present"
 subtitle: "Evolution of Methods and Approaches"
-short_title: Structural Conservation of Canvases in Russia
+short_title: "Structural Conservation of Canvases in Russia"
 order: 60
 layout: essay
 contributor:
