--- a/content/1-history/3.md
+++ b/content/1-history/3.md
@@ -1,7 +1,7 @@
 ---
 label: "3"
-title: "To Treat or Not to Treat: That Is the Question"
-subtitle: "Structural Treatment of Canvas Paintings from a Danish Perspective"
+title: "To Treat or Not to Treat"
+subtitle: "That Is the Question; Structural Treatment of Canvas Paintings from a Danish Perspective"
 short_title:
 layout: essay
 order: 30
