Format mathematical formula

--- a/content/8-posters/50.md
+++ b/content/8-posters/50.md
@@ -48,7 +48,13 @@ Based on the recipes shown in [fig. 50.1](#fig-50-1), six formulas of the lining
 
 Ten test pieces were prepared for each adhesive (A–F), and half of them were subjected to artificial aging. The heat aging was carried out in the Espec LHU-113 Benchtop Temperature/Humidity Chamber at 55°C and 45% RH for 3 months. This aging condition was used by Gustav Berger in 1972 to test adhesives used in the consolidation of paintings. According to the reference, the heat aging at 55°C could keep the objects below the melting point (and possible critical deterioration point) of resins ({% cite 'Berger 1972b' %}). The mean value of the removal rate for each recipe was calculated as follows:
 
-$$\frac{\text{sample\ }\text{weight}\text{\ after\ adhesive\ impregnation\ -\ sample\ weight\ after\ adhesive\ removal]]{\text{sample\ weight\ after\ adhesive\ impregnation\ -\ sample\ weigh\ before\ adhesive\ impregnation]]$$
+<div id="paper-50-formula">
+
+sample weight after adhesive impregnation − sample weight after adhesive removal
+
+sample weight after adhesive impregnation − sample weight before adhesive impregnation
+
+</div>
 
 The results are shown in [fig. 50.2](#fig-50-2).
 
