Add new short titles

--- a/content/1-history/1.md
+++ b/content/1-history/1.md
@@ -1,7 +1,7 @@
 ---
 label: "1"
 title: "Understanding Structure, Changing Practice"
-short_title:
+short_title: "Understanding Structure, Changing Practice"
 layout: essay
 order: 10
 contributor:
