--- a/content/2-present-practice/11.md
+++ b/content/2-present-practice/11.md
@@ -1,7 +1,7 @@
 ---
 label: "11"
 title: "Customized Methodologies Developed to Solve Conservation Issues with Large-Size Paintings on Canvas"
-short_title:
+short_title: "Customized Methodologies"
 layout: essay
 order: 110
 contributor:
