--- a/content/2-present-practice/8.md
+++ b/content/2-present-practice/8.md
@@ -1,7 +1,7 @@
 ---
 label: "8"
 title: "The Relining of van Dyck’s *Equestrian Portrait of Charles I*"
-short_title:
+short_title: "Relining van Dyck"
 layout: essay
 order: 80
 contributor:
