--- a/content/1-history/3.md
+++ b/content/1-history/3.md
@@ -2,7 +2,7 @@
 label: "3"
 title: "To Treat or Not to Treat"
 subtitle: "That Is the Question; Structural Treatment of Canvas Paintings from a Danish Perspective"
-short_title:
+short_title: "To Treat or Not to Treat"
 layout: essay
 order: 30
 contributor:
