remove hyperlink and write out URL

--- a/content/8-posters/62.md
+++ b/content/8-posters/62.md
@@ -57,7 +57,7 @@ Fifty-three commercially primed artist canvases were collected from art stores i
 
 Canvas fiber, priming binder, and pigments/fillers were primarily analyzed using optical microscopy, attenuated total reflectance­–Fourier transform infrared spectroscopy (ATR-FTIR), pyrolysis gas chromatography/mass spectrometry (Py-GCMS), X-ray fluorescence spectroscopy (XRF), and some with Raman spectroscopy and scanning electron microscopy–energy-dispersive X-ray spectroscopy (SEM-EDX). In addition, uniaxial tensile strength testing and heat testing were undertaken.
 
-A summary of results is presented below. More detailed analysis for each sample is found as [supplementary data](https://www.qagoma.qld.gov.au/__data/assets/pdf_file/0004/596821/Investigating-commercially-primed-contemporary-artist-canvases-supplementary-data.pdf) {% cite 'Carter et al 2020' %}.
+A summary of results is presented below. More detailed analysis for each sample is found as supplementary data ([https://www.qagoma.qld.gov.au/__data/assets/pdf_file/0004/596821/Investigating-commercially-primed-contemporary-artist-canvases-supplementary-data.pdf](https://www.qagoma.qld.gov.au/__data/assets/pdf_file/0004/596821/Investigating-commercially-primed-contemporary-artist-canvases-supplementary-data.pdf)) {% cite 'Carter et al 2020' %}.
 
 ### Priming Stratigraphy
 
