--- a/content/1-history/2.md
+++ b/content/1-history/2.md
@@ -45,7 +45,7 @@ A relaxation test is another useful experiment for studying time-dependent mater
 
 {% figure 'fig-2-3' %}
 
-The stress-relaxation test method outlined in ([fig. 2.4](#fig-2-4)) is the approach used in the CCI Lining Project to investigate the effects of different lining treatments for paintings on canvas ({% cite 'Michalski and Daly Hartin 1996' %}). From recent work, ([fig. 2.4](#fig-2-4)) shows a plot of tension (kN/m) versus time after a fixed strain was applied to each sample ({% cite 'Daly Hartin et al. 2011' %}). The initial sharp spike is caused by the rapid initial strain (see ([fig. 2.3b and c](#fig-2-3)), which is followed by a quick decay in tension due to stress relaxation. The model painting with a linen lining shows no difference from the model painting (unlined) over the measurement time scale. The sailcloth lining causes a uniform vertical shift in tension due to the stiffness of the fabric, which is constant over the sixty-hour period. An advantage of the sailcloth lining is that its stiffness allows for a stable increase in tension, with less strain imposed on the painting. In fact, the strain could be reduced to roughly half and still maintain a similar tension to the model painting in the experimental time scale. The wax resin lining also shows a strong vertical shift due to the wax stiffness; however, it also exhibits relaxation characteristics.
+The stress-relaxation test method outlined in ([fig. 2.4](#fig-2-4)) is the approach used in the CCI Lining Project to investigate the effects of different lining treatments for paintings on canvas ({% cite 'Michalski and Daly Hartin 1996' %}). From recent work, ([fig. 2.4](#fig-2-4)) shows a plot of tension (kN/m) versus time after a fixed strain was applied to each sample ({% cite 'Daly Hartin et al. 2011' %}). The initial sharp spike is caused by the rapid initial strain (see [fig. 2.3b and c](#fig-2-3)), which is followed by a quick decay in tension due to stress relaxation. The model painting with a linen lining shows no difference from the model painting (unlined) over the measurement time scale. The sailcloth lining causes a uniform vertical shift in tension due to the stiffness of the fabric, which is constant over the sixty-hour period. An advantage of the sailcloth lining is that its stiffness allows for a stable increase in tension, with less strain imposed on the painting. In fact, the strain could be reduced to roughly half and still maintain a similar tension to the model painting in the experimental time scale. The wax resin lining also shows a strong vertical shift due to the wax stiffness; however, it also exhibits relaxation characteristics.
 
 {% figure 'fig-2-4' %}
 
@@ -69,7 +69,7 @@ The purpose of using tensile test data in studies of artists paints is due to th
 
 > The ultimate tensile properties (the stress at break σ~b~, and the corresponding extension ratio λ~b~) vary markedly with the temperature and with the stress-time or strain-time history prior to rupture. Considerable evidence indicates that data obtained at different temperatures can often be superposed to give master curves which show the variation of σ~b~ and λ~b~ over many decades of time at a fixed temperature. Further, the temperature shift factor is the same—or nearly the same—as that used to superpose viscoelastic data representing small-deformation behavior. In other words, the same molecular parameters which influence chain mobility, thus the time and temperature dependence of linear viscoelastic response, also have a controlling effect on the time and temperature dependence of the ultimate tensile properties. ({% cite 'Smith 1965' '275' %})
 
-Recent studies on artists paints have highlighted the application of this approach for generating master curves of failure strains from tensile data. ([fig. 2.7a](#fig-2-7)) shows a generalized illustration of a failure envelope created using a similar approach to that shown for modulus data (see ([fig. 2.5](#fig-2-5))). The path to point A results in failure before reaching the target strain at the defined strain rate. Reducing the strain rate avoids failure for the path to point B, which is outside of the failure envelope. ([fig. 2.7b](#fig-2-7)) shows the path to point C outside of the failure envelope due to a horizontal shift of the master curve from a temperature increase or possibly a plasticizing effect (e.g., increased moisture content). Combining higher temperature and reduced strain rate locates point D even further from the failure line.
+Recent studies on artists paints have highlighted the application of this approach for generating master curves of failure strains from tensile data. ([fig. 2.7a](#fig-2-7)) shows a generalized illustration of a failure envelope created using a similar approach to that shown for modulus data (see [fig. 2.5](#fig-2-5)). The path to point A results in failure before reaching the target strain at the defined strain rate. Reducing the strain rate avoids failure for the path to point B, which is outside of the failure envelope. ([fig. 2.7b](#fig-2-7)) shows the path to point C outside of the failure envelope due to a horizontal shift of the master curve from a temperature increase or possibly a plasticizing effect (e.g., increased moisture content). Combining higher temperature and reduced strain rate locates point D even further from the failure line.
 
 {% figure 'fig-2-7' %}
 
