--- a/content/1-history/4.md
+++ b/content/1-history/4.md
@@ -67,7 +67,7 @@ Beva 371 was used for both strip-lining and lining, combined with a variety of f
 
 As surface deformations could not be addressed during a wax-resin or Beva lining, they had to be treated beforehand. The NMM developed the prestretching technique, first published at the 1974 conference, to introduce tension and address cupping and deformation out of plane ({% cite 'Chittenden, Lewis, and Percival-Prescott 2003' %}). This technique was used routinely in the 1970s and 1980s.
 
-Loose-lining starts in the early 1970s, and sixteen paintings were loose-lined in 1975 using either TenCate or Fabrene, possibly in preparation for an exhibition. TenCate was used until 1986, after which it was replaced with polyester sailcloth. One painting was loose-lined with wax-impregnated cotton duck in 1974, possibly as an experiment around the time of the conference. Linen was used regularly for loose-lining, perhaps prioritizing aesthetics over mechanical properties for this purpose (see ([fig. 4.3](#fig-4-3))).
+Loose-lining starts in the early 1970s, and sixteen paintings were loose-lined in 1975 using either TenCate or Fabrene, possibly in preparation for an exhibition. TenCate was used until 1986, after which it was replaced with polyester sailcloth. One painting was loose-lined with wax-impregnated cotton duck in 1974, possibly as an experiment around the time of the conference. Linen was used regularly for loose-lining, perhaps prioritizing aesthetics over mechanical properties for this purpose (see [fig. 4.3](#fig-4-3)).
 
 ### Case Studies
 
