--- a/content/1-history/5.md
+++ b/content/1-history/5.md
@@ -91,7 +91,7 @@ In this context, the social elevation of the “craftsman Chiariello” suggests
 
 Francesco was evidently proud of these medals, so much so that in a plea presented to the king to claim his rights as “manufacturer of canvas for painting, and liner of paintings”[^9] he cited the entire text praising him that lay behind his award from the Reale Istituto d’Incoraggiamento. In his plea he asked to be named “Foderatore del Real Museo Borbonico” and claimed as his right—“acquired with great labor”—the exercise of the profession of liner. He also complained that “often restorers”—clearly those who dealt with “artistic” restoration—“allow themselves, to the detriment of art, to put onto canvas paintings that should by rights have been handed to the petitioner.” In addition to the services already offered to the Real Museo, he cited as a credential the “large silver medal” won in the public exhibition.
 
-Francesco Chiariello’s familiarity and friendship with Neapolitan artists—foremost among these Domenico Morelli and Giuseppe Palizzi—will be testified to, at a much later date, by the certificates his son Pasquale obtained in order to promote the elevation in his social status. This enterprising son, in fact, succeeded in obtaining a further prestigious award from King Vittorio Emanuele III in 1901: the concession to “display the Royal Crest on the sign of his studio,” which together with the medals won in public exhibitions will prominently feature on his letterhead (see ([fig. 5.3](#fig-5-3))).
+Francesco Chiariello’s familiarity and friendship with Neapolitan artists—foremost among these Domenico Morelli and Giuseppe Palizzi—will be testified to, at a much later date, by the certificates his son Pasquale obtained in order to promote the elevation in his social status. This enterprising son, in fact, succeeded in obtaining a further prestigious award from King Vittorio Emanuele III in 1901: the concession to “display the Royal Crest on the sign of his studio,” which together with the medals won in public exhibitions will prominently feature on his letterhead (see [fig. 5.3](#fig-5-3)).
 
 {% figure 'fig-5-3' %}
 
