--- a/content/8-posters/46.md
+++ b/content/8-posters/46.md
@@ -20,11 +20,19 @@ Textiles with a woven pattern were used as painters’ canvases by Spanish and I
 
 In this poster, textiles that have been hidden for centuries between paint and lining canvas come to life in handwoven reconstructions of the support canvas of five paintings by El Greco ([fig. 46.1](#fig-46-1-a)), Titian ([fig. 46.2](#fig-46-2-a)), Caravaggio ([fig. 46.3](#fig-46-3-a)), and Velázquez ([fig. 46.4](#fig-46-4-a)), ([fig. 46.5](#fig-46-5-a)). The support canvas used by the great masters is shown in each of the figures.
 
+### El Greco
+
 {% figuregroup '2' 'fig-46-1-a, fig-46-1-b, fig-46-1-c, fig-46-1-d' 'El Greco (Greek, 1541–1614), *The Burial of the Count of Orgaz*, 1586. Oil on canvas, 480 x 360 cm (189 x 141 3/4 in.). (a) Piece of original canvas showing weave pattern. (b) Weave draft ([[De los Rios y Rojas and Socorro 1977]]). (c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a and b) [[De los Rios y Rojas and Socorro 1977]] (TK credit, might change), (c) Lab O, (d) Lab O / João Mariano' %}
+
+### Titian
 
 {% figuregroup '2' 'fig-46-2-a, fig-46-2-b, fig-46-2-c, fig-46-2-d' 'Titian (Italian, ca. 1488–1576), *The Vendramin Family*, 1540–1545. Oil on canvas, 206 x 288.5 cm (81 1/8 x 113 5/8 in.). (a) Detail of Gabriel’s left hand before cleaning and after retouching. (b) Handmade drawing of the pattern. (c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) National Gallery London, (b and c) Lab O, (d) Lab O / João Mariano' %}
 
+### Caravaggio
+
 {% figuregroup '2' 'fig-46-3-a, fig-46-3-b, fig-46-3-c, fig-46-3-d' 'Caravaggio (Italian, 1571–1610), *The Crucifixion of Saint Andrew*, 1606–1607. Oil on canvas, 202.5 x 152.7 cm (79 3/4 x 60 1/8 in.). (a) Radiograph. (b) Handmade drawing of the pattern. (c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) Cleveland Museum of Art, (b and c) Lab O, (d) Lab O / João Mariano' %}
+
+### Velázquez
 
 {% figuregroup '2' 'fig-46-4-a, fig-46-4-b, fig-46-4-c, fig-46-4-d' 'Diego Velázquez (Spanish, 1599–1660), *Supper at Emmaus*, 1622–1623. Oil on canvas, 123.2 x 132.7 cm (48 1/2 x 52 1/4 in.). (a) Radiograph. (b) Handmade drawing of the pattern. (c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) Metropolitan Museum of Art, (b and c) Lab O, (d) Lab O / João Mariano' %}
 
