Add in table 27.3

--- a/content/5-adhesives/27.md
+++ b/content/5-adhesives/27.md
@@ -186,7 +186,7 @@ The results on historical lining canvas confirm those obtained on degraded moder
 
 These studies have demonstrated the effectiveness of the nanocellulose-based and multilayered nanoparticle treatments for the consolidation of degraded cotton and historical linen samples from linings. A wide range of products has been studied in both polar and apolar solvents and with different handling properties, physical behavior (viscosity, penetration, response to RH) ([table 27.3](#table-27-3)), which makes them suitable for various substrates. The reinforcement provided is also greater, with less weight added, in comparison with traditional the consolidants animal glue and Beva 371 ({% cite 'Bridarolli et al. 2020' %}; {% cite 'Nechyporchuk et al. 2018' %}).
 
-{% figure 'table-27-3' %}
+{% figure 'table-27-3' 'is-table-scale-7' %}
 
 This research marks the first step in the introduction and evaluation of three different types of treatments using nanocellulose and multilayered nanoparticles as potential consolidants for canvas-supported paintings. Further developments and improvements of their capabilities have been shown to be possible by mixing treatments together (e.g., multiscale reinforcement mixing solutions 1 and 3), combining deacidification and consolidation strategies (e.g., nanocomposites, multilayered NPs), or simply by changing the application method, treatment viscosity, or treatment-to-canvas adhesion. In this latter case, the adhesion could be improved through modification of the surface chemistry of the NPs used for consolidation.
 
